[gd_scene load_steps=3 format=3 uid="uid://brb3xhgavq8gl"]

[ext_resource type="Script" uid="uid://b8f52kscpst56" path="res://scene/abilities/parry/parry_controller.gd" id="1_kf0uu"]
[ext_resource type="PackedScene" uid="uid://ci75yoy6kjcwn" path="res://scene/abilities/parry/parry.tscn" id="2_kb46s"]

[node name="ParryController" type="Node"]
script = ExtResource("1_kf0uu")
parry_scene = ExtResource("2_kb46s")
parry_cd = null
push_distance = null
parry_angle = null
parry_radius = null

[node name="ParryCooldown" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="ParryCooldown" to="." method="_on_parry_cooldown_timeout"]
